--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,10 @@
 }
 
 @theme {
+	--spacing-navbar-height: 50px;
+	--spacing-sidebar-width: 250px;
+	--spacing-sidebar-shrink-width: 70px;
+
 	--spacing-xs: 0.5rem;
 	--spacing-sm: 0.8rem;
 	--spacing-md: 1.2rem;
