add new spacing

--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,8 @@
 	--spacing-sidebar-width: 250px;
 	--spacing-sidebar-shrink-width: 70px;
 
+	--spacing-xxxs: 0.2rem;
+	--spacing-xxs: 0.3rem;
 	--spacing-xs: 0.5rem;
 	--spacing-sm: 0.8rem;
 	--spacing-md: 1.2rem;
